<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#100F0F"
    tools:context="com.example.btchat.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/bt_application"
        android:textColor="#FFD3CDCD"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/device_controls"
        android:textColor="#FFD3CDCD"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/connection_controls"
        android:textColor="#FFD3CDCD"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDiscoverable_on_off" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:text="@string/click_on_the_device_to_pair"
        android:textColor="#D3CDCD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDiscoverable_on_off" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="176dp"
        android:text="@string/sensor_controls"
        android:textColor="#FFD3CDCD"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDiscoverable_on_off" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="22dp"
        android:text="@string/device1_data"
        android:textColor="#D3CDCD"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStartSensors" />


    <TextView
        android:id="@+id/incomingMessagesDevice1"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:layout_marginStart="16dp"
        android:background="#98766A6A"
        android:fadeScrollbars="false"
        android:freezesText="false"
        android:isScrollContainer="true"
        android:overScrollMode="ifContentScrolls"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="vertical"
        android:textColor="#D3CDCD"
        android:verticalScrollbarPosition="defaultPosition"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="20dp"
        android:text="@string/device2_data"
        android:textColor="#D3CDCD"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/btnStopSensors" />

    <TextView
        android:id="@+id/incomingMessagesDevice2"
        android:layout_width="wrap_content"
        android:layout_height="185dp"
        android:layout_marginStart="8dp"
        android:background="#98766A6A"
        android:fadeScrollbars="false"
        android:freezesText="false"
        android:isScrollContainer="true"
        android:overScrollMode="ifContentScrolls"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="vertical"
        android:textColor="#D3CDCD"
        android:verticalScrollbarPosition="defaultPosition"
        app:layout_constraintStart_toEndOf="@+id/incomingMessagesDevice1"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="212dp"
        android:layout_marginTop="20dp"
        android:text="@string/device3_data"
        android:textColor="#D3CDCD"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/btnStopSensors" />

    <TextView
        android:id="@+id/incomingMessagesDevice3"
        android:layout_width="wrap_content"
        android:layout_height="183dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="16dp"
        android:background="#98766A6A"
        android:fadeScrollbars="false"
        android:freezesText="false"
        android:isScrollContainer="true"
        android:overScrollMode="ifContentScrolls"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="vertical"
        android:textColor="#D3CDCD"
        android:verticalScrollbarPosition="defaultPosition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/incomingMessagesDevice2"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />


    <Button
        android:id="@+id/btnONOFF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="1dp"
        android:text="@string/on_off"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/btnDiscoverable_on_off"
        android:layout_width="135dp"
        android:layout_height="49dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="1dp"
        android:onClick="btnEnableDisableDiscoverable"
        android:text="@string/enable_discoverability"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/btnONOFF"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/btnFindUnpairedDevices"
        android:layout_width="93dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="1dp"
        android:onClick="btnDiscover"
        android:text="Discover"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/btnStartConnection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnFindUnpairedDevices"
        android:layout_marginStart="16dp"
        android:text="@string/start_connection"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFindUnpairedDevices" />

    <Button
        android:id="@+id/btnStartSensors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="76dp"
        android:text="@string/start_sensors"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStartConnection" />

    <Button
        android:id="@+id/btnStopSensors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="164dp"
        android:layout_marginTop="19dp"
        android:text="@string/stop_sensors"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lvNewDevices" />

    <ListView
        android:id="@+id/lvNewDevices"
        style="@android:style/Widget.DeviceDefault.ExpandableListView"
        android:layout_width="0dp"
        android:layout_height="149dp"
        android:layout_below="@id/btnFindUnpairedDevices"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="15dp"
        android:background="#98766A6A"
        android:cacheColorHint="#93000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnStartConnection"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


    <RadioGroup
        android:layout_width="130dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radio_receiver"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/receiver"
            android:textColor="#FFFFFF"
            tools:layout_editor_absoluteX="256dp"
            tools:layout_editor_absoluteY="75dp" />

        <RadioButton
            android:id="@+id/radio_transmitter1"
            android:layout_width="match_parent"
            android:layout_height="21dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/transmitter_1"
            android:textColor="#FFFFFF"
            tools:layout_editor_absoluteX="218dp"
            tools:layout_editor_absoluteY="42dp" />

        <RadioButton
            android:id="@+id/radio_transmitter2"
            android:layout_width="match_parent"
            android:layout_height="19dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/transmitter_2"
            android:textColor="#FFFFFF"
            tools:layout_editor_absoluteX="336dp"
            tools:layout_editor_absoluteY="55dp" />

        <RadioButton
            android:id="@+id/radio_transmitter3"
            android:layout_width="match_parent"
            android:layout_height="17dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/transmitter_3"
            android:textColor="#FFFFFF"
            tools:layout_editor_absoluteX="309dp"
            tools:layout_editor_absoluteY="123dp" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>